Fix padding on mobile solar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -876,7 +876,7 @@ section {
   border: none;
   height: 5px;
   margin-left: 0;
-  width: 280px;
+  width: 325px;
   background: #209DD8;
   margin-bottom: 50px;
 }
@@ -916,14 +916,15 @@ section {
 
 @media (max-width: 1024px) {
   .sunrays-section .col-lg-7{
-    padding-right: 0px;
+    padding-right: 20px;
   }
   .section-benefits .col-lg-7{
-    padding-left: 0px;
+    padding-left: 20px;
   
   }
   .section-benefits2 .col-lg-7{
-    padding-left: 0px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .section-benefits2{
     padding:0;
